--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -139,7 +139,7 @@
     <section>
       <h2>Rebuildability</h2>
       <p>
-        A key goal of OCFL is the rebuildability of a repository from an OCFL storage root without additional
+        A key goal of the OCFL is the rebuildability of a repository from an OCFL storage root without additional
         information resources. Consequently, a key implementation consideration should be to ensure that OCFL objects
         contain all the data and metadata required to achieve this. With reference to the [[OAIS]] model, this would
         include all the descriptive, administrative, structural, representation, and preservation metadata relevant to
@@ -147,21 +147,22 @@
       </p>
       <p>
         Additionally, as an aid to those who may need to recover OCFL objects in the future, it is recommended that a
-        copy of the [[OCFL-Specification]] is stored in the top level of the OCFL storage root. OCFL ignores files
+        copy of the [[OCFL-Specification]] is stored in the top level of the OCFL storage root. The OCFL ignores files
         other than the conformance declaration at the top level so it is a good location to store documentation that
         may be useful for recovery.
       </p>
       <p>
         A more complete approach would be to create a specific OCFL object that contains this documentation and to have
-        a pointer to its location in the storage root. This documentation object would then be subject OCFL validation
-        and any other digital preservation processes that might be implemented without requiring special handling.
+        a pointer to its location in the storage root. This documentation object would then be subject to OCFL
+        validation and any other digital preservation processes that might be implemented without requiring special
+        handling.
       </p>
     </section>
 
     <section>
       <h2>Fixity</h2>
       <p>
-        The digests in the manifest are used by OCFL for content addressability rather than fixity but they are
+        The digests in the manifest are used by the OCFL for content addressability rather than fixity but they are
         suitable for use as part of a fixity regime, and the manifest block usefully identifies all the files in an
         object. OCFL validation also requires that digests and files match. However, while the characteristics of digest
         algorithms that make them suitable for fixity checking and content addressing are closely related, they are not
@@ -172,10 +173,10 @@
       <p>
         Consequently, it is sensible to allow additional or alternative fixity algorithms to be used. These may be made
         in a <a href="../spec/#fixity">fixity block</a> which has the same layout as a manifest block but permits a
-        broader range of algorithms. OCFL will consider a fixity block valid if all the files referenced in the block
-        exist but OCFL does not validate digests for all possible algorithms. The fixity block does not have to include
-        all the files in an object to permit legacy fixity to be imported without requiring continued use of obsolete
-        digest algorithms.
+        broader range of algorithms. The OCFL will consider a fixity block valid if all the files referenced in the
+        block exist but the OCFL does not validate digests for all possible algorithms. The fixity block does not have
+        to include all the files in an object to permit legacy fixity to be imported without requiring continued use of
+        obsolete digest algorithms.
       </p>
     </section>
   </section>
@@ -186,10 +187,10 @@
     <section>
       <h2>Object Contents</h2>
       <p>
-        OCFL separates the existing file path of stored files from the logical file path of these files' content in OCFL
-        object versions. This is a key feature that allows previous versions of objects to remain immutable but
-        permitting deduplication, forward delta differencing, and easy file renaming. Consequently, OCFL only requires
-        that files added to any version of an OCFL object must be stored somewhere within the relevant version
+        The OCFL separates the existing file path of stored files from the logical file path of these files' content in
+        OCFL object versions. This is a key feature that allows previous versions of objects to remain immutable but
+        permitting deduplication, forward delta differencing, and easy file renaming. Consequently, the OCFL only
+        requires that files added to any version of an OCFL object must be stored somewhere within the relevant version
         directory, with a corresponding entry in the manifest block. An entry in the state block determines the path
         and name of the file within that version by referencing the manifest entry, not the actual path on disk.
       </p>
@@ -201,31 +202,32 @@
       <p>
         However, this is not always possible. For example, complex objects with deep file hierarchies may encounter
         issues if they come from a fileystem that allows longer paths than are supported by the target OCFL system. In
-        this case, the decoupling between existing file paths and logical file paths in OCFL allows the use of truncated
-        paths for storage while the full paths can be preserved in state block entries which are not length constrained.
+        this case, the decoupling between existing file paths and logical file paths in OCFL objects allows the use of
+        truncated paths for storage while the full paths can be preserved in state block entries which are not length
+        constrained.
       </p>
       <p>
         Another use case is importing content from other repository systems which renames files on ingest and stores
         them in a flat hierarchy. These can be imported, as is, and the original paths and file names recorded through
-        suitable state block entries rather than reconstructing a physical file layout. Of course, OCFL supports
+        suitable state block entries rather than reconstructing a physical file layout. Of course, the OCFL supports
         ongoing use of such a methodology.
       </p>
 
       <section>
         <h2>Data and Metadata</h2>
         <p>
-          OCFL object versions are composed of series of files/bitstreams but OCFL does not make any distinction between
-          different types of files other than those reserved for OCFL functionality: the inventory, its digest file, and
-          conformance declaration files. It is possible, for example, to create separate data and metadata directories
-          within each version to help organize material but all files are treated equally for the purpose of OCFL
-          validation and management.
+          OCFL object versions are composed of series of files/bitstreams but the OCFL does not make any distinction
+          between different types of files other than those reserved for OCFL functionality: the inventory, its digest
+          file, and conformance declaration files. It is possible, for example, to create separate data and metadata
+          directories within each version to help organize material but all files are treated equally for the purpose
+          of OCFL validation and management.
         </p>
       </section>
 
       <section>
         <h2>Deduplication</h2>
         <p>
-          OCFL supports optional deduplication if a client ensures that all digests in the manifest block refer to a
+          The OCFL supports optional deduplication if a client ensures that all digests in the manifest block refer to a
           single file path on disk. This entry is created the first time file content is stored in an OCFL Object.
           Subsequent references to that file content should then occur in the state block only. This can be determined
           by computing the digests of incoming files and determining if they already exist in the manifest block.
@@ -242,25 +244,25 @@
         <p>
           Filesystem metadata (e.g. permissions, access, and creation times) are not considered portable between
           filesystems or preservable through file transfer operations. Nor can these attributes be validated in terms of
-          fixity in a consistent manner. As such, OCFL neither explicitly supports nor expects that these attributes
+          fixity in a consistent manner. As such, the OCFL neither explicitly supports nor expects that these attributes
           remain consistent. If retaining this metadata is important then files should either be encapsulated in a
           filesystem image format that preserves this information, or the metadata extracted and stored explicitly in an
           additional file.
         </p>
-      </section>    
-        
+      </section>
+
       <section>
         <h2>Empty Directories</h2>
         <p>
-          OCFL preserves files and their content, with directories serving as a useful organizational convention. An
+          The OCFL preserves files and their content, with directories serving as a useful organizational convention. An
           empty directory consists only of filesystem metadata and therefore, as noted above, is not amenable to direct
-          preservation in OCFL. If the preservation of empty directories is considered essential then the suggested
-          route is to insert a zero length file named <code>.keep</code> into the directory which will ensure
+          preservation in OCFL objects. If the preservation of empty directories is considered essential then the
+          suggested route is to insert a zero length file named <code>.keep</code> into the directory which will ensure
           directories are preserved as part of the file's path.
         </p>
         <p>
-          Note that <code>.keep</code> files are not considered special by OCFL in any way and are treated exactly the
-          same way as other files. As such, a non-zero length <code>.keep</code> file is not considered invalid.
+          Note that <code>.keep</code> files are not considered special by the OCFL in any way and are treated exactly
+          the same way as other files. As such, a non-zero length <code>.keep</code> file is not considered invalid.
         </p>
       </section>
 
@@ -283,7 +285,7 @@
     <section>
       <h2>Storage Root Hierarchy</h2>
       <p>
-        Strictly speaking, OCFL only requires that an OCFL Storage Root contains OCFL Objects in directories,
+        Strictly speaking, the OCFL only requires that an OCFL Storage Root contains OCFL Objects in directories,
         distributed in some manner in the underlying filesystem. In turn, an OCFL object is identified purely by
         the presence of a [[NAMASTE]] conformance file in the object root. The presence and correctness of
         inventory files and version directories are a validation rather than an identification concern.
@@ -402,12 +404,12 @@
     <section>
       <h2>Filesystem Features</h2>
       <p>
-        In order to be portable across as many filesystems as possible, OCFL makes use of a subset of filesystem
+        In order to be portable across as many filesystems as possible, the OCFL makes use of a subset of filesystem
         features that are very broadly supported. It is therefore strongly advised to not use additional features in
         OCFL Storage Roots since OCFL clients and other filesystem tools that need to operate between different
         filesystems may exhibit unpredictable behaviour when feature sets do not match. In particular, using features
-        such as hard and soft (symbolic) links for deduplication can work at odds with OCFL's own mechanisms and should
-        be avoided.
+        such as hard and soft (symbolic) links for deduplication can work at odds with the OCFL's own mechanisms and
+        should be avoided.
       </p>
       <p>
         Consideration should also be given to calculations of storage usage when migrating between filesystems. Many
@@ -427,9 +429,9 @@
     <section>
       <h2>Basic File Operations</h2>
       <p>
-        OCFL and its inventory structure are designed to support and capture the following file operations
+        The OCFL and its inventory structure are designed to support and capture the following file operations
         that create OCFL versions, regardless of whether optional features, such as deduplication, are used.
-        OCFL is not concerned with the process of creating versions but only the final outcome in terms of
+        The OCFL is not concerned with the process of creating versions but only the final outcome in terms of
         the differences with the previous version that need to be recorded and preserved.
       </p>
       <ul>
@@ -519,9 +521,9 @@
         The new object need not have the same identifier as the original object. In this case, the deleted object can be
         replaced by a "stub" object with the original identifier and location in the OCFL Storage Root. This object is
         a standard OCFL object that just contains brief information that redirects users and software to the new
-        version - possibly with an indication of why the new object was created, if appropriate. OCFL does not define
-        this stub object in any way - its structure, interpretation and handling are entirely client dependent, but
-        ideally some elements should be human readable for rebuildability.
+        version - possibly with an indication of why the new object was created, if appropriate. The OCFL does not
+        define this stub object in any way - its structure, interpretation and handling are entirely client dependent,
+        but ideally some elements should be human readable for rebuildability.
       </p>
     </section>
 
@@ -530,8 +532,8 @@
       <p>
         There may be the need to record some actions on objects that do not result in changes to the object content.
         For example, copying the object to new storage or validating fixity and finding nothing amiss. The
-        <code>log</code> directory is the location in an OCFL object where such events can be recorded. OCFL does not
-        make any assumptions about the contents of this directory but, if it exists, then its contents will not be
+        <code>log</code> directory is the location in an OCFL object where such events can be recorded. The OCFL does
+        not make any assumptions about the contents of this directory but, if it exists, then its contents will not be
         subject any validation processes.
       </p>
     </section>
@@ -539,10 +541,10 @@
     <section>
       <h2>Forward Delta</h2>
       <p>
-        Forward delta differencing is a key, though optional, feature of OCFL that means that parts of an OCFL object
-        version that are unchanged from a previous version are not stored again. This has the potential to significantly
-        improve storage efficiency when objects have multiple versions, whether through ongoing curatorial action or
-        the accessioning of updated material.
+        Forward delta differencing is a key, though optional, feature of the OCFL that means that parts of an OCFL
+        object version that are unchanged from a previous version are not stored again. This has the potential to
+        significantly improve storage efficiency when objects have multiple versions, whether through ongoing
+        curatorial action or the accessioning of updated material.
       </p>
       <p>
         When a new version of an OCFL Object is created from an earlier version and a client wishes to implement forward
