--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -409,7 +409,7 @@
         <h2>Digests</h2>
         <p>
             Digests play two roles in an OCFL Object. The first is that digests allow for content-addressable
-            reference to files with the OCFL Object. That is, the connection between a file's <a>existing file
+            reference to files within the OCFL Object. That is, the connection between a file's <a>existing file
             path</a> on physical storage and its <a>logical file path</a> in a version of the object's content
             is made with a digest of its contents, rather than its filename. This use of the content digest
             facilitates de-duplication of files with the same content within an object, such as files that are
