--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -199,8 +199,8 @@
           needing to first transition these contents to their own format.
          </p>
         <p>
-          While digital repository content changes relatively slowly, it is necessary to be able to track changes to 
-          digital objects. Within the file and directory layout specification, OCFL provides a simple structure to 
+          While digital repository content changes relatively slowly, it is necessary to be able to track changes to
+          digital objects. Within the file and directory layout specification, the OCFL provides a simple structure to
           efficiently capture versions of object contents so that all previous states of an object may be recovered
           and examined.
         </p>
@@ -319,7 +319,7 @@
             (i.e., structure).</li>
     </ol>
     <p>
-        A key goal of OCFL is the rebuildability of a repository from an OCFL Storage Root without additional
+        A key goal of the OCFL is the rebuildability of a repository from an OCFL Storage Root without additional
         information resources. Consequently, a key implementation consideration should be to ensure that OCFL Objects
         contain all the data and metadata required to achieve this. With reference to the [[OAIS]] model, this would
         include all the descriptive, administrative, structural, representation and preservation metadata relevant
@@ -414,7 +414,7 @@
             through hardware degradation, accident, or malicious actors.
         </p>
         <p>
-            For content-addressing, OCFL Objects MUST use either <code>sha512</code> or <code>sha256</code> 
+            For content-addressing, OCFL Objects MUST use either <code>sha512</code> or <code>sha256</code>
             digests, and SHOULD use <code>sha512</code> digests. The choice of the <code>sha512</code> digest
             algorithm recognizes that it has no known collision vulnerabilities and is less computationally
             intensive to compute than <code>sha256</code>, [[Stop-Using-SHA-256]].
@@ -822,7 +822,7 @@
         </p>
         <p>
           Root conformance indicates that the OCFL Storage Root conforms to this section (i.e. the OCFL Storage Root
-          section) of the specification.  OCFL Objects within the OCFL Storage Root also include a conformance
+          section) of the specification. OCFL Objects within the OCFL Storage Root also include a conformance
           declaration which MUST indicate OCFL Object conformance to the same or earlier version of the specification.
         </p>
     </section>
@@ -852,7 +852,7 @@
         <h2>Extensions</h2>
         <p>
             The behavior of the storage root may be extended to support features from other specifications.
-            An OCFL validator MUST ignore any files in the storage root it does not understand. Additional 
+            An OCFL validator MUST ignore any files in the storage root it does not understand. Additional
             files MUST NOT appear in other directories under the storage root.
         </p>
         <blockquote class="informative">
@@ -926,7 +926,7 @@
     ├── 0=ocfl_object_1.0
     ├── inventory.json
     ├── inventory.json.sha512
-    ├── v1        
+    ├── v1
     │   ├── inventory.json
     │   ├── inventory.json.sha512
     │   └── content
@@ -934,7 +934,7 @@
     │       ├── foo
     │       │   └── bar.xml
     │       └── image.tiff
-    ├── v2    
+    ├── v2
     │   ├── inventory.json
     │   ├── inventory.json.sha512
     │   └── content
@@ -1030,8 +1030,8 @@
     <section id="example-bagit-in-ocfl">
         <h2>BagIt in an OCFL Object</h2>
         <p>
-            [[BagIt]] is a common file packaging specification, but unlike OCFL it does not provide a mechanism for
-            content versioning. Using OCFL it is possible to store a BagIt structure with content versioning, such
+            [[BagIt]] is a common file packaging specification, but unlike the OCFL it does not provide a mechanism for
+            content versioning. Using the OCFL it is possible to store a BagIt structure with content versioning, such
             that when the object state is resolved, it creates a valid BagIt 'bag'. This example will illustrate one way
             this can be accomplished, using the <a href="https://tools.ietf.org/html/draft-kunze-bagit-17#section-4.1">
             example of a basic bag</a> given in the BagIt specification.
@@ -1162,7 +1162,7 @@ myfirstbag
         <h2>Moab in an OCFL Object</h2>
         <p>
             [[Moab]] is an archive information package format developed and used by Stanford University.
-            Many of the ideas in Moab have been refined by OCFL, and OCFL is designed to
+            Many of the ideas in Moab have been refined by the OCFL, and the OCFL is designed to
             give institutions currently using Moab an easy path to adoption.
         </p>
         <p>
