Clarify that version numbering is in base 10

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -368,8 +368,9 @@
         <h2>Version Directories</h2>
         <p>
             OCFL Object content MUST be stored as a sequence of one or more versions. Each object version is stored in a
-            version directory under the object root. The sequence of version numbers is the sequence of positive
-            integers: 1, 2, 3, etc., and the version directory name is constructed by adding the prefix <code>v</code>.
+            version directory under the object root. The sequence of version numbers is the sequence of positive,
+            base-ten integers: 1, 2, 3, etc., and the version directory name is constructed by adding the prefix
+            <code>v</code>.
         </p>
         <p>
             Implementations SHOULD use version directory names constructed without zero-padding the
