Clarify head must have the highest version directory name

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -535,7 +535,8 @@
                 </dd>
                 <dt><code>head</code></dt>
                 <dd>
-                    A value corresponding to the version directory name of the most recent version of the object.
+                    The version directory name of the most recent version of the object. This MUST be the version
+                    directory name with the highest version number.
                 </dd>
             </dl>
             <p>
