Fixed: Clarify algorithm choice requirements (#296)
* Fixed: Clarify algorithm choice requirements

Fixes #291

* Fixed: Adjust wording from review

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -417,10 +417,10 @@
             to determine whether a file has become corrupt, through hardware degradation or accident for example.
         </p>
         <p>
-            For content-addressing, OCFL Objects MUST use either <code>sha512</code> or <code>sha256</code>
-            digests, and SHOULD use <code>sha512</code> digests. The choice of the <code>sha512</code> digest
-            algorithm recognizes that it has no known collision vulnerabilities and is less computationally
-            intensive to compute than <code>sha256</code>, [[Stop-Using-SHA-256]].
+            For content-addressing, OCFL Objects SHOULD use <code>sha512</code>. The choice of the <code>sha512</code>
+            digest algorithm as default recognizes that it has no known collision vulnerabilities, is less
+            computationally intensive to compute than <code>sha256</code>, [[Stop-Using-SHA-256]], and multiple
+            implementations are available.
         </p>
         <p>
             For storage of additional fixity values, and perhaps to support legacy content migration, implementers
