--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -492,7 +492,7 @@
         <p>
           Systems with version directories have often used zero padding in order to show version order with common
           lexical sorting tools (such as Unix <code>ls</code>). Zero padding is not recommended in order to avoid
-          having to make arbitrary choices of padding length or to place limits of the number of versions supported.
+          having to make arbitrary choices of padding length or to place limits on the number of versions supported.
         </p>
       </section>
 
