Fix example 5.2 by removing empty 'content' directory
Resolves: https://github.com/OCFL/spec/issues/314

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -947,8 +947,7 @@
     │           └── bar.xml
     └── v3
         ├── inventory.json
-        ├── inventory.json.sha512
-        └── content
+        └── inventory.json.sha512
 
 
 </pre>
