Minor typo in impl-notes

--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -298,7 +298,7 @@
         alongside the OCFL specification as described in the Rebuildability section.
       </p>
       <p>
-        In the interests of transparency the it makes sense for an object's URI, its unique identifier and
+        In the interests of transparency it makes sense for an object's URI, its unique identifier and
         its location under the OCFL Storage Root to be aligned and simply derivable from each other. Good
         examples include:
       </p>
