--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -884,7 +884,7 @@
               MUST be a consistent, symmetric mapping between the character set used for filesystem paths and
               Unicode which MUST be used for all OCFL-related operations.</li>
           <li>The OCFL REQUIRES that filesystems are both case-preserving and case-sensitive so that the mapping 
-              between storage paths in the inventory and the filesystem is consistent and unqiue.</li>
+              between storage paths in the inventory and the filesystem is consistent and unique.</li>
           <li>Filesystem metadata (e.g. permissions, access, and creation times) are not considered portable between
               filesystems or preservable through file transfer operations. Nor can these attributes be validated in 
               terms of fixity in a consistent manner. As such, the OCFL does NOT support the portability of these
