Identifier may not be URI

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -264,7 +264,7 @@
             <dfn>OCFL Object</dfn>:
         </dt>
         <dd>
-            A group of one or more content files and administrative information, that are together identified by a URI.
+            A group of one or more content files and administrative information, that together have a unique identifier.
             The object may contain a sequence of versions of the files that represent the evolution of the object's
             contents.
         </dd>
