add importance of implementation notes

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -175,7 +175,8 @@
   <p>
       This normative specification describes the nature of an OCFL Object (the "object-at-rest") and the arrangement
       of OCFL Objects under an OCFL Storage Root. A set of recommendations for how OCFL Objects should be acted upon
-      (the "object-in-motion") can be found in the [[OCFL-Implementation-Notes]].
+      (the "object-in-motion") can be found in the [[OCFL-Implementation-Notes]]. The OCFL editorial group recommends
+      reading both the specification and the implementation notes in order to understand the full scope of the OCFL.
   </p>
     <section id="need">
         <h2>Need</h2>
