Fix exiting -> existing (twice)

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -1034,7 +1034,7 @@
     <section id="example-object-with-file-renaming">
         <h2>File Renaming in an OCFL Object</h2>
         <p>
-            The following example OCFL Object inventory shows how exiting file paths may differ from
+            The following example OCFL Object inventory shows how existing file paths may differ from
             logical file paths. The example object has just one version, <code>v1</code>, which has
             two files with logical file paths <code>.hidden.txt</code> and
             <code>name with spaces.txt</code> as shown in the <code>state</code> block. These names
@@ -1043,7 +1043,7 @@
             <code>name%20with%20spaces.txt</code> within the <code>v1/content</code> directory. This
             specification does not constrain the normalization or renaming strategy adopted, in
             this example URI encoding was used but many other approaches are possible, and they may
-            or may not yield an obvious relation between exiting file paths and logical file paths.
+            or may not yield an obvious relation between existing file paths and logical file paths.
         </p>
 <pre>
 {
