Clarify that logs dir is called logs

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -744,10 +744,11 @@
     <section id="logs-directory">
         <h2>Logs Directory</h2>
         <p>
-            The base directory of the object MAY contain a logs directory, which MAY be empty. Implementers SHOULD use
-            this for storing files that contain a record of actions taken on the object. Since these logs may be subject
-            to local standards requirements, the format of these logs is considered out-of-scope for the OCFL Object.
-            Clients operating on the object MAY log actions here that are not otherwise captured.
+            The base directory of an OCFL Object MAY contain a directory named <code>logs</code>, which MAY be empty.
+            Implementers SHOULD use this for storing files that contain a record of actions taken on the object. Since
+            these logs may be subject to local standards requirements, the format of these logs is considered
+            out-of-scope for the OCFL Object. Clients operating on the object MAY log actions here that are not
+            otherwise captured.
         </p>
         <blockquote class="informative">
             <p>
