--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -371,7 +371,7 @@
             OCFL Object content MUST be stored as a sequence of one or more versions. Each object version is stored in a
             version directory under the object root. The sequence of version numbers is the sequence of positive,
             base-ten integers: 1, 2, 3, etc., and the version directory name is constructed by adding the prefix
-            <code>v</code>.
+            <code>v</code>. The version number sequence MUST start at 1 and MUST be continuous without missing integers.
         </p>
         <p>
             Implementations SHOULD use version directory names constructed without zero-padding the
