Fix release dates for 0.1 and 0.2

--- a/0.1/implementation-notes/index.html
+++ b/0.1/implementation-notes/index.html
@@ -8,6 +8,7 @@
             async class="remove"></script>
     <script class="remove">
         var respecConfig = {
+            publishDate: "2018-10-18",
             specStatus: "ocfl-cr",
             shortName: "ocfl-spec",
             includePermalinks: true,
