--- a/0.2/spec/index.html
+++ b/0.2/spec/index.html
@@ -8,6 +8,7 @@
             async class="remove"></script>
     <script class="remove">
         var respecConfig = {
+            publishDate: "2019-02-18",
             specStatus: "ocfl-cr",
             shortName: "ocfl-spec",
             includePermalinks: true,
