--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -217,10 +217,10 @@
 <section id="terminology">
     <h2>Terminology</h2>
     <dl>
-        <dt><dfn>Existing File Path</dfn>:</dt>
+        <dt><dfn>Content Path</dfn>:</dt>
         <dd>
-            The file path of a file on disk or in an object store, relative to the <a>OCFL Object Root</a>. Existing
-            file paths are used in the <a>Manifest</a> within an <a>Inventory</a>.
+            The file path of a file on disk or in an object store, relative to the <a>OCFL Object Root</a>. Content
+            paths are used in the <a>Manifest</a> within an <a>Inventory</a>.
         </dd>
         <dt>
             <dfn>Digest</dfn>:
@@ -235,17 +235,17 @@
             A file, expressed in JSON, that tracks the history and current state of an OCFL Object.
         </dd>
         <dt>
-            <dfn>Logical File Path</dfn>:
+            <dfn>Logical Path</dfn>:
         </dt>
         <dd>
-            A path that represents a file's location in the <a>logical state</a> of an object. Logical file paths are
+            A path that represents a file's location in the <a>logical state</a> of an object. Logical paths are
             used in conjunction with a digest to represent the file name for a given bitstream at a given version.
         </dd>
         <dt>
             <dfn>Logical State</dfn>:
         </dt>
         <dd>
-            A grouping of logical file paths tied to their corresponding bitstreams that reflect the state of the
+            A grouping of logical paths tied to their corresponding bitstreams that reflect the state of the
             object content for a given version.
         </dd>
         <dt>
@@ -411,12 +411,12 @@
         <h2>Digests</h2>
         <p>
             Digests play two roles in an OCFL Object. The first is that digests allow for content-addressable
-            reference to files within the OCFL Object. That is, the connection between a file's <a>existing file
-            path</a> on physical storage and its <a>logical file path</a> in a version of the object's content
-            is made with a digest of its contents, rather than its filename. This use of the content digest
-            facilitates de-duplication of files with the same content within an object, such as files that are
-            unchanged from one version to the next. The second role that digests play is provide for fixity checks
-            to determine whether a file has become corrupt, through hardware degradation or accident for example.
+            reference to files within the OCFL Object. That is, the connection between a file's <a>content
+            path</a> on physical storage and its <a>logical path</a> in a version of the object's content is made
+            with a digest of its contents, rather than its filename. This use of the content digest facilitates
+            de-duplication of files with the same content within an object, such as files that are unchanged from
+            one version to the next. The second role that digests play is provide for fixity checks to determine
+            whether a file has become corrupt, through hardware degradation or accident for example.
         </p>
         <p>
             For content-addressing, OCFL Objects SHOULD use <code>sha512</code>. The choice of the <code>sha512</code>
@@ -500,7 +500,7 @@
             files has no significance.
         </p>
         <p>
-            The forward slash (/) path separator MUST be used in existing and logical file paths in the
+            The forward slash (/) path separator MUST be used in content and logical paths in the
             <a href="#manifest">manifest</a>, <a href="#fixity">fixity</a>, and <a href="#version">state</a> blocks
             within the inventory. Implementations that target systems using other separators will need to translate
             paths appropriately.
@@ -552,19 +552,18 @@
             <p>
                 The value of the <code>manifest</code> key is a JSON object, with keys corresponding to the digests
                 of every content file in all versions of the <a>OCFL Object</a>. The value for each key is an array
-                containing the <a>existing file path</a>s of files in the OCFL Object that have content with the
-                given digest. <a data-lt="existing file path">Existing file paths</a> within a manifest block MUST be
-                relative to the <a>OCFL Object Root</a>.
+                containing the <a>content path</a>s of files in the OCFL Object that have content with the
+                given digest. content paths within a manifest block MUST be relative to the <a>OCFL Object Root</a>.
             </p>
             <blockquote class="informative">
                 <p>
                     Non-normative note: If only one file is stored in the OCFL Object for each digest, fully
-                    de-duplicating the content, then there will be only one <a>existing file path</a> for each digest.
-                    There may, however, be multiple logical file paths for a given digest if the content was
-                    not entirely de-duplicated when constructing the OCFL Object.
+                    de-duplicating the content, then there will be only one <a>content path</a> for each digest.
+                    There may, however, be multiple logical paths for a given digest if the content was not entirely
+                    de-duplicated when constructing the OCFL Object.
                 </p>
                 <p>
-                    An example manifest object for three existing file paths, all in version 1, is shown below:
+                    An example manifest object for three content paths, all in version 1, is shown below:
                 </p>
 <pre>
   "manifest": {
@@ -608,15 +607,15 @@
                             to the <a>logical state</a> of the object at that version. The keys of this JSON object
                             are digest values, each of which MUST correspond to an entry in the
                             <a href="#manifest">manifest of the inventory</a>. The value for each key is an array
-                            containing <a>logical file path</a> names of files in the OCFL Object state that have
+                            containing <a>logical path</a> names of files in the OCFL Object state that have
                             content with the given digest.
                         </p>
                         <blockquote class="informative">
                             <p>
                                 Non-normative note: The <a>logical state</a> of the object uses content-addressing
-                                to map logical file paths to their bitstreams, as expressed in the manifest
+                                to map logical paths to their bitstreams, as expressed in the manifest
                                 section of the inventory. Notably, the version state provides de-duplication of content
-                                within the OCFL Object by mapping multiple logical file paths with the same content to
+                                within the OCFL Object by mapping multiple logical paths with the same content to
                                 the same digest in the manifest. See [[OCFL-Implementation-Notes]].
                             </p>
                             <p>
@@ -680,7 +679,7 @@
                 The <code>fixity</code> block MUST contain keys corresponding to <a href="#digest-algorithms">digest
                 algorithms listed in the Digests section</a>. The value of each key MUST follow the structure of the
                 <a href="#manifest"><code>manifest</code></a> block; that is, a key corresponding to the digest value,
-                and an array of <a>existing file path</a>s that match that digest.
+                and an array of <a>content path</a>s that match that digest.
             </p>
             <blockquote class="informative">
                 <p>
@@ -1039,20 +1038,18 @@
     </section>
 
     <section id="example-object-diff-paths">
-        <h2>Different Logical and Existing File Paths in an OCFL Object</h2>
+        <h2>Different Logical and Content Paths in an OCFL Object</h2>
         <p>
-            The following example OCFL Object inventory shows how existing file paths may differ from
-            logical file paths. The example object has just one version, <code>v1</code>, which has
-            two files with logical file paths <code>a file.wxy</code> and
-            <code>another file.xyz</code> as shown in the <code>state</code> block. The corresponding
-            existing file paths are <code>v1/content/3bacb119a98a15c5</code> and
-            <code>v1/content/9f2bab8ef869947d</code> respectively, as shown in the
-            <code>manifest</code>. Except for location within the appropriate version directory,
-            <code>v1/content</code> in this example, the OCFL specification does not constrain the
-            choice of existing file paths used when creating or updating an OCFL object. The choice
-            might depend on particular limitations of, or optimizations for, the target storage
-            system, or on portability considerations. Any compliant implementation will be able to
-            recover version state with the original logical file paths.
+            The following example OCFL Object inventory shows how content paths may differ from logical paths.
+            The example object has just one version, <code>v1</code>, which has two files with logical paths
+            <code>a file.wxy</code> and <code>another file.xyz</code> as shown in the <code>state</code> block.
+            The corresponding content paths are <code>v1/content/3bacb119a98a15c5</code> and
+            <code>v1/content/9f2bab8ef869947d</code> respectively, as shown in the <code>manifest</code>.
+            Except for location within the appropriate version directory, <code>v1/content</code> in this example,
+            the OCFL specification does not constrain the choice of content paths used when creating or
+            updating an OCFL object. The choice might depend on particular limitations of, or optimizations for, the
+            target storage system, or on portability considerations. Any compliant implementation will be able to
+            recover version state with the original logical paths.
         </p>
 <pre>
 {
