Fixed: Remove linear

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -719,7 +719,7 @@
 DIGEST inventory.json
 </pre>
         <p>
-            One or more linear whitespace characters (spaces or tabs) must separate DIGEST from the string
+            One or more whitespace characters (spaces or tabs) must separate DIGEST from the string
             <code>inventory.json</code>; that is, the name of the inventory file in the same directory.
         </p>
         <p>
