check diff-paths and bagit examples; fix bagit example

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -1085,7 +1085,7 @@ DIGEST inventory.json
             target storage system, or on portability considerations. Any compliant implementation will be able to
             recover version state with the original logical paths.
         </p>
-<pre>
+<pre id="example-diff-paths-inventory">
 {
   "digestAlgorithm": "sha512",
   "head": "v1",
@@ -1188,7 +1188,7 @@ myfirstbag
         <p>
             The OCFL Inventory for this object would be as follows:
         </p>
-<pre>
+<pre id="example-bagit-inventory">
 {
   "digestAlgorithm": "sha512",
   "head": "v2",
@@ -1234,7 +1234,7 @@ myfirstbag
         "name": "Somebody Else"
       }
     }
-  ]
+  }
 }
 </pre>
     </section>
