--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -886,7 +886,7 @@ DIGEST inventory.json
             </p>
         </blockquote>
     </section>
-    
+
     <section id="filesystem-features">
         <h2>Filesystem features</h2>
         <p>
@@ -935,7 +935,7 @@ DIGEST inventory.json
             The inventory for this OCFL Object, the same both at the top-level and
             in the <code>v1</code> directory, might be:
         </p>
-<pre>
+<pre id="example-minimal-inventory">
 {
   "digestAlgorithm": "sha512",
   "head": "v1",
@@ -1001,7 +1001,7 @@ DIGEST inventory.json
             the other changes, includes additional fixity information using <code>md5</code> and
             <code>sha1</code> digest algorithms, and minimal metadata for each version.
         </p>
-<pre>
+<pre id="example-versioned-inventory">
 {
   "digestAlgorithm": "sha512",
   "fixity": {
@@ -1085,7 +1085,7 @@ DIGEST inventory.json
             target storage system, or on portability considerations. Any compliant implementation will be able to
             recover version state with the original logical paths.
         </p>
-<pre>
+<pre id="example-diff-paths-inventory">
 {
   "digestAlgorithm": "sha512",
   "head": "v1",
@@ -1188,7 +1188,7 @@ myfirstbag
         <p>
             The OCFL Inventory for this object would be as follows:
         </p>
-<pre>
+<pre id="example-bagit-inventory">
 {
   "digestAlgorithm": "sha512",
   "head": "v2",
@@ -1234,7 +1234,7 @@ myfirstbag
         "name": "Somebody Else"
       }
     }
-  ]
+  }
 }
 </pre>
     </section>
