--- a/0.2/spec/index.html
+++ b/0.2/spec/index.html
@@ -396,24 +396,23 @@
         <p>
             Version directories MUST contain a designated content sub-directory if the object contains files to be
             preserved, and SHOULD NOT contain this sub-directory otherwise. The name of this designated sub-directory
-            MAY be defined in the <a href="#inventory">inventory file</a> using the key "contentDirectory" with the
-            value being the chosen sub-directory name as a string, relative to the version directory. The value of the
-            key "contentDirectory" MUST NOT contain any filesystem delimiter characters. If the key "contentDirectory"
-            is set, it MUST be set in the first version of the object and MUST NOT change between versions of the
-            same object.
+            MAY be defined in the <a href="#inventory">inventory file</a> using the key <code>contentDirectory</code>
+            with the value being the chosen sub-directory name as a string, relative to the version directory.
+            The value of the key <code>contentDirectory</code> MUST NOT contain any filesystem delimiter characters.
+            If the key <code>contentDirectory</code> is set, it MUST be set in the first version of the object and MUST NOT
+            change between versions of the same object.
           </p>
           <p>
             There MUST be no other files as children of a version directory, other than an <a
              href="#inventory">inventory file</a> and a <a href="#inventory-digest">inventory digest</a>.
-            The version directory SHOULD NOT contain any directories other than the designated <code>content</code>
+            The version directory SHOULD NOT contain any directories other than the designated content
             sub-directory.
         </p>
         <p>
-            If the key "contentDirectory" is not present in the <a href="#inventory">inventory file</a> then the name
-            of the designated content sub-directory MUST be 'content'. OCFL-compliant tools (including any validators)
-            MUST ignore all directories in the object root except for the designated content directory. OCFL
-            validators may log the presence of directories that are not the designated content directory, but must
-            not fail validation for that reason.
+            If the key <code>contentDirectory</code> is not present in the <a href="#inventory">inventory file</a> then the
+            name of the designated content sub-directory MUST be <code>content</content>. OCFL-compliant tools
+            (including any validators) MUST ignore all directories in the object version directory except for the
+            designated content directory.
         </p>
         <p>
             Every file within a version's <code>content</code> directory MUST be referenced in the
