--- a/0.2/spec/index.html
+++ b/0.2/spec/index.html
@@ -410,7 +410,7 @@
         </p>
         <p>
             If the key <code>contentDirectory</code> is not present in the <a href="#inventory">inventory file</a> then the
-            name of the designated content sub-directory MUST be <code>content</content>. OCFL-compliant tools
+            name of the designated content sub-directory MUST be <code>content</code>. OCFL-compliant tools
             (including any validators) MUST ignore all directories in the object version directory except for the
             designated content directory.
         </p>
