--- a/0.2/spec/index.html
+++ b/0.2/spec/index.html
@@ -394,12 +394,12 @@
             version directory names.
         </p>
         <p>
-            Version directories MUST contain a designated content sub-directory if the object contains files to be
+            Version directories MUST contain a designated content sub-directory if the version contains files to be
             preserved, and SHOULD NOT contain this sub-directory otherwise. The name of this designated sub-directory
             MAY be defined in the <a href="#inventory">inventory file</a> using the key <code>contentDirectory</code>
             with the value being the chosen sub-directory name as a string, relative to the version directory.
-            The value of the key <code>contentDirectory</code> MUST NOT contain any filesystem delimiter characters.
-            If the key <code>contentDirectory</code> is set, it MUST be set in the first version of the object and MUST NOT
+            The <code>contentDirectory</code> value MUST NOT contain the forward slash (/) path separator. If the key
+            <code>contentDirectory</code> is set, it MUST be set in the first version of the object and MUST NOT
             change between versions of the same object.
           </p>
           <p>
