addresses final requested change

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -212,8 +212,7 @@
           The OCFL also fills the need for robustness against errors, corruption, and migration. The versioning schema
           ensures an OCFL object is robust enough to allow for the discovery of human errors. The fixity checking built
           into OCFL via content addressable storage allows implementers to identify file corruption that might happen
-          outside of normal human interactions. The OCFL allows eases content migrations by providing a technology
-          agnostic method for verifying OCFL objects have remained fixed.
+          outside of normal human interactions. The OCFL eases content migrations by providing a technology agnostic  method for verifying OCFL objects have remained fixed.
         </p>
         <h3>Storage diversity</h3>
         <p>
